# sma-bluetooth-inverters

./: .gitignore  CMakeLists.txt  LICENSE.GPL  bt-device-list.txt  readme.md
docs/: sma-protocol.txt
src/: CMakeLists.txt  arguments.cpp  arguments.hpp  in_bluetooth.c  in_bluetooth.h  in_smadata2plus.c  in_smadata2plus.h  main.cpp  utils.cpp  utils.hpp
